--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@
 @import './secciones/main-home';
 @import './secciones/main-como-pedir';
 @import './secciones/main-quien-soy';
+@import './secciones/main-contacto';
 
 
 
