--- a/scss/secciones/_header-como-pedir.scss
+++ b/scss/secciones/_header-como-pedir.scss
@@ -7,3 +7,13 @@
     justify-content: space-between;
     align-items: flex-start
 }
+
+/*  Dispositivos HASTA 425px  - CELULARES */
+@media(max-width: 425px) {
+
+    .encabezado-comoPedir {
+        background-image: url(https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417192/desarrollo_web/20220215_134256_kljjlx.jpg);
+        background-size: center;
+        height: 700px;       
+    }
+  }
