--- a/scss/secciones/_header-creaciones.scss
+++ b/scss/secciones/_header-creaciones.scss
@@ -8,60 +8,12 @@
   align-items: flex-start;
 }
 
-
-/* MEDIA QUERY = DISPOITIVOS MEDIANOS */
-/* Dispositivos hasta 768px son considerados medianos  */
-@media (max-width: 768px) {
-
-  .img-logo {
-      width: 200px;
-  }
-
-  .navegador__listaMenu {
-      font-size: 20px;
-      list-style: none;
-      padding: 10px;
-  }
-
-  .navegador__listaMenu-activo {
-      font-size: 25px;
-  }
-}
-
 /*  Dispositivos HASTA 425px  - CELULARES */
-@media (max-width: 425px) {
-  .navegador__listaMenu a {
-    text-decoration: none;
-    color: rgb(250, 250, 241);
-  }
-
-  .encabezado-home {
-    background-image: url(../recursos/inLove.jpg);
-    background-size: center;
-  }
-
-  p {
-    padding: 1rem 1rem 1rem 1rem;
-  }
-
-  .img-logo {
-    width: 150px;
-  }
+@media(max-width: 425px) {
 
   .encabezado-creaciones {
-    background-image: url(../recursos/creaciones-copo.jpg);
-    background-size: center;
-    height: 700px;
+      background-image: url(https://res.cloudinary.com/dfbwcrulp/image/upload/v1676417152/desarrollo_web/creaciones-copo_qc1szg.jpg);
+      background-size: center;
+      height: 700px;       
   }
-
-  .navegador__listaMenu {
-    font-size: 15px;
-    list-style: none;
-    padding: 10px;
-  }
-
-  .navegador__listaMenu-activo {
-    font-size: 15px;
-  }
-
 }
