--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -1,39 +1,83 @@
-
 /* ENCABEZAD0 */
 .img-logo {
-    width: 300px;
+  width: 300px;
 }
 
 .navegador {
-    font-style: none;
-    font-weight: bolder;
+  font-style: none;
+  font-weight: bolder;
 }
 
 .navegador__listaMenu {
-    font-size: $titulo-navegador;
-    list-style: none;
-    padding: 25px;
+  font-size: $titulo-navegador;
+  list-style: none;
+  padding: 25px;
 }
 
 .navegador__listaMenu li {
-    margin-left: 50px;
-    display: inline-block;
+  margin-left: 50px;
+  display: inline-block;
 }
 
 .translate:hover {
-    translate: 2px;
+  translate: 2px;
 }
 
-
 .navegador__listaMenu a {
-    text-decoration: none;  
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .navegador__listaMenu-activo {
-    font-size: $titulo-navegador-activo;
+  font-size: $titulo-navegador-activo;
 }
 
-a{
-    font-family: $typo-principal !important;
+a {
+  font-family: $typo-principal !important;
+}
+
+/* MEDIA QUERY = DISPOITIVOS MEDIANOS */
+/* Dispositivos hasta 768px son considerados medianos  */
+@media (max-width: 768px) {
+  .img-logo {
+    width: 200px;
+  }
+
+  .navegador__listaMenu {
+    font-size: 20px;
+    list-style: none;
+    padding: 10px;
+  }
+
+  .navegador__listaMenu-activo {
+    font-size: 25px;
+  }
+}
+
+/*  Dispositivos HASTA 425px  - CELULARES */
+@media (max-width: 425px) {
+  .navegador__listaMenu a {
+    text-decoration: none;
+    color: rgb(250, 250, 241);
+  }
+
+  p {
+    padding: 1rem 1rem 1rem 1rem;
+  }
+
+  .img-logo {
+    width: 150px;
+  }
+
+  .navegador__listaMenu {
+    font-size: 15px;
+    list-style: none;
+    padding: 10px;
+  }
+
+  .navegador__listaMenu-activo {
+    font-size: 15px;
+  }
+
+
 }
