--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -17,6 +17,7 @@ h2{
 }
 
 p {
+    font-family: $typo-principal;
     color: $color-letra-principal ;
     text-align: center;
     padding: 0rem 2rem 2rem 2rem;
