--- a/scss/utilidades/_typo.scss
+++ b/scss/utilidades/_typo.scss
@@ -1,7 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;1,600&display=swap');
+
 
 $typo-principal: 'Barlow', sans-serif; 
+$typo-secundaria: 'Montserrat', sans-serif;
 
 $titulos-home: 60px ;
 $titulos: 45px ;
