--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* Las variables van arriba de todo */
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;1,600&display=swap");
 * {
   margin: 0;
   padding: 0; }
