--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -3,8 +3,10 @@
 h4{
     font-family: $typo-principal;
 }
-.footer {
+
+footer{
     background-color: $color-primario;
+    height: auto;
 }
 
 .tituloFooter {
