--- a/scss/utilidades/_colors.scss
+++ b/scss/utilidades/_colors.scss
@@ -1,6 +1,9 @@
 
-$color-primario:  rgb(250, 250, 241);
-$color-secundario:  rgb(173, 173, 169);
+$color-primario:  #fafaf1;
+$color-secundario: #FAE9E1;
+
+
+
 
 $color-letra-principal: black;
 $color-letra-secundario: rgb(250, 250, 241);
